src/antlr/AngularParser.java
// Generated from D:/compilller/compilller/src/antlr/AngularParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SLASH_GREATER_THAN=1, SLASH_LESS_THAN=2, DL=3, DR=4, OPEN_APP=5, CLOSE_APP=6, 
		NGFOR=7, H1=8, IMG=9, BUTTON=10, P=11, SRC=12, ALT=13, STYLE=14, CLICK=15, 
		SHOW_DETAILS=16, INJECTABLE=17, CONSTRUCTOR=18, NUMBER=19, LENGTH=20, 
		COLOR=21, DIV=22, NEW=23, GREATER_THAN=24, LESS_THAN=25, REQUIRED=26, 
		INPUT=27, OUTPUT=28, ANY=29, COMMA=30, SEMICOLON=31, COLON=32, PERIOD=33, 
		QUESTION_MARK=34, HASH_TAG=35, LEFT_PAREN=36, RIGHT_PAREN=37, LEFT_BRACE=38, 
		RIGHT_BRACE=39, LEFT_BRACKET=40, RIGHT_BRACKET=41, CONSTANT=42, VARIABLE=43, 
		IMPORT=44, EXPORT=45, ARRAY_LITarayERAL=46, NG_MODULE=47, COMPONENT=48, 
		DIRECTIVE=49, PIPE=50, SERVICE=51, PROVIDER=52, ROUTER=53, SELECTOR=54, 
		IMPORTS=55, TEMPLATEURL=56, STYLEURL=57, STANDALONE=58, ASSIGN=59, INTEGER=60, 
		FLOAT=61, NULL=62, BOOLEAN=63, PLUS=64, MINUS=65, MULTIPLY=66, DIVIDE=67, 
		MODULO=68, WHITESPACE=69, COMMENT=70, SingleLineComment=71, NEWLINE=72, 
		STRING=73, OTHER=74, FOR_LOOP=75, WHILE_LOOP=76, IF_CONDITION=77, ELSE_CONDITION=78, 
		SWITCH_CASE=79, CASE_CONDITION=80, BREAK_KEYWORD=81, CONTINUE_KEYWORD=82, 
		RETURN_KEYWORD=83, CLASS_KEYWORD=84, EXTENDS_KEYWORD=85, IMPLEMENTS_KEYWORD=86, 
		PUBLIC_ACCESS=87, PRIVATE_ACCESS=88, PROTECTED_ACCESS=89, STATIC_KEYWORD=90, 
		SUPER_KEYWORD=91, THIS_KEYWORD=92, FROM=93, GETTER_KEYWORD=94, SETTER_KEYWORD=95, 
		CONSOLE_LOG=96, PRINT_FUNCTION=97, CUSTOM_PRINT_FUNCTION=98, FUNCTION_KEYWORD=99, 
		ARROW_FUNCTION=100, ASYNC_KEYWORD=101, EQUALS=102, NOT_EQUALS=103, GREATER_THAN_OR_EQUAL=104, 
		LESS_THAN_OR_EQUAL=105, LOGICAL_AND=106, LOGICAL_OR=107, LOGICAL_NOT=108, 
		LOGICAL_NOT_PERIOD=109, PLUS_ASSIGN=110, MINUS_ASSIGN=111, INCREMENT=112, 
		DECREMENT=113, MULTIPLY_ASSIGN=114, DIVIDE_ASSIGN=115, MODULUS_ASSIGN=116, 
		POWER_ASSIGN=117, RIGHT_SHIFT_ARITHMETIC_ASSIGN=118, LEFT_SHIFT_ARITHMETIC_ASSIGN=119, 
		RIGHT_SHIFT_LOGICAL_ASSIGN=120, BIT_AND_ASSIGN=121, BIT_XOR_ASSIGN=122, 
		BIT_OR_ASSIGN=123, NULLCOALESCE=124, IDENTIFIER=125;
	public static final int
		RULE_program = 0, RULE_importStatements = 1, RULE_service = 2, RULE_componentDeclaration = 3, 
		RULE_component_metadata = 4, RULE_html = 5, RULE_style = 6, RULE_all = 7, 
		RULE_vif = 8, RULE_htmlDocument = 9, RULE_element = 10, RULE_divElement = 11, 
		RULE_div = 12, RULE_headerElement = 13, RULE_imageElement = 14, RULE_image = 15, 
		RULE_buttonElement = 16, RULE_button = 17, RULE_paragraphElement = 18, 
		RULE_ngForElement = 19, RULE_componentElement = 20, RULE_compElement = 21, 
		RULE_elementContent = 22, RULE_attributes = 23, RULE_attribute = 24, RULE_classAttribute = 25, 
		RULE_srcAttribute = 26, RULE_altAttribute = 27, RULE_styleAttribute = 28, 
		RULE_clickAttribute = 29, RULE_propertyBinding = 30, RULE_eventBinding = 31, 
		RULE_expression = 32, RULE_interpolation = 33, RULE_stylesheet = 34, RULE_rule = 35, 
		RULE_selector = 36, RULE_declaration = 37, RULE_class = 38, RULE_classmem = 39, 
		RULE_function_body = 40, RULE_classMember = 41, RULE_constructor = 42, 
		RULE_inputProperty = 43, RULE_outputProperty = 44, RULE_method = 45, RULE_statement = 46, 
		RULE_print = 47, RULE_functionCall = 48, RULE_methodCall = 49, RULE_arguments = 50, 
		RULE_assignment = 51, RULE_loopStatement = 52, RULE_returnStatement = 53, 
		RULE_term = 54, RULE_factor = 55, RULE_any_type = 56, RULE_product = 57;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "importStatements", "service", "componentDeclaration", "component_metadata", 
			"html", "style", "all", "vif", "htmlDocument", "element", "divElement", 
			"div", "headerElement", "imageElement", "image", "buttonElement", "button", 
			"paragraphElement", "ngForElement", "componentElement", "compElement", 
			"elementContent", "attributes", "attribute", "classAttribute", "srcAttribute", 
			"altAttribute", "styleAttribute", "clickAttribute", "propertyBinding", 
			"eventBinding", "expression", "interpolation", "stylesheet", "rule", 
			"selector", "declaration", "class", "classmem", "function_body", "classMember", 
			"constructor", "inputProperty", "outputProperty", "method", "statement", 
			"print", "functionCall", "methodCall", "arguments", "assignment", "loopStatement", 
			"returnStatement", "term", "factor", "any_type", "product"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'/>'", "'</'", "'{{'", "'}}'", "'app-'", "'</app-'", "'ngFor'", 
			"'h1'", "'img'", "'button'", "'p'", "'src'", "'alt'", "'style'", "'click'", 
			"'show details'", "'@Injectable'", "'constructor'", null, null, null, 
			"'div'", "'new'", "'>'", "'<'", "'required'", "'@Input'", "'@Output'", 
			"'any'", "','", "';'", "':'", "'.'", "'?'", "'#'", "'('", "')'", "'{'", 
			"'}'", "'['", "']'", "'const'", null, "'import'", "'export'", null, "'NgModule'", 
			"'@Component'", "'Directive'", "'Pipe'", "'Service'", "'Provider'", "'Router'", 
			"'selector'", "'imports'", "'templateUrl'", "'styleUrl'", "'standalone'", 
			"'='", null, null, "'null'", null, "'+'", "'-'", "'*'", "'/'", "'%'", 
			null, null, null, null, null, null, "'for'", "'while'", "'if'", "'else'", 
			"'switch'", "'case'", "'break'", "'continue'", "'return'", "'class'", 
			"'extends'", "'implements'", "'public'", "'private'", "'protected'", 
			"'static'", "'super'", "'this'", "'from'", "'get'", "'set'", "'console.log'", 
			"'print'", "'myCustomPrintFunction'", "'function'", "'=>'", "'async'", 
			"'=='", "'!='", "'>='", "'<='", "'&&'", "'|'", "'!'", "'!.'", "'+='", 
			"'-='", "'++'", "'--'", "'*='", "'/='", "'%='", "'**='", "'>>='", "'<<='", 
			"'>>>='", "'&='", "'^='", "'|='", "'??'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SLASH_GREATER_THAN", "SLASH_LESS_THAN", "DL", "DR", "OPEN_APP", 
			"CLOSE_APP", "NGFOR", "H1", "IMG", "BUTTON", "P", "SRC", "ALT", "STYLE", 
			"CLICK", "SHOW_DETAILS", "INJECTABLE", "CONSTRUCTOR", "NUMBER", "LENGTH", 
			"COLOR", "DIV", "NEW", "GREATER_THAN", "LESS_THAN", "REQUIRED", "INPUT", 
			"OUTPUT", "ANY", "COMMA", "SEMICOLON", "COLON", "PERIOD", "QUESTION_MARK", 
			"HASH_TAG", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACE", "RIGHT_BRACE", 
			"LEFT_BRACKET", "RIGHT_BRACKET", "CONSTANT", "VARIABLE", "IMPORT", "EXPORT", 
			"ARRAY_LITarayERAL", "NG_MODULE", "COMPONENT", "DIRECTIVE", "PIPE", "SERVICE", 
			"PROVIDER", "ROUTER", "SELECTOR", "IMPORTS", "TEMPLATEURL", "STYLEURL", 
			"STANDALONE", "ASSIGN", "INTEGER", "FLOAT", "NULL", "BOOLEAN", "PLUS", 
			"MINUS", "MULTIPLY", "DIVIDE", "MODULO", "WHITESPACE", "COMMENT", "SingleLineComment", 
			"NEWLINE", "STRING", "OTHER", "FOR_LOOP", "WHILE_LOOP", "IF_CONDITION", 
			"ELSE_CONDITION", "SWITCH_CASE", "CASE_CONDITION", "BREAK_KEYWORD", "CONTINUE_KEYWORD", 
			"RETURN_KEYWORD", "CLASS_KEYWORD", "EXTENDS_KEYWORD", "IMPLEMENTS_KEYWORD", 
			"PUBLIC_ACCESS", "PRIVATE_ACCESS", "PROTECTED_ACCESS", "STATIC_KEYWORD", 
			"SUPER_KEYWORD", "THIS_KEYWORD", "FROM", "GETTER_KEYWORD", "SETTER_KEYWORD", 
			"CONSOLE_LOG", "PRINT_FUNCTION", "CUSTOM_PRINT_FUNCTION", "FUNCTION_KEYWORD", 
			"ARROW_FUNCTION", "ASYNC_KEYWORD", "EQUALS", "NOT_EQUALS", "GREATER_THAN_OR_EQUAL", 
			"LESS_THAN_OR_EQUAL", "LOGICAL_AND", "LOGICAL_OR", "LOGICAL_NOT", "LOGICAL_NOT_PERIOD", 
			"PLUS_ASSIGN", "MINUS_ASSIGN", "INCREMENT", "DECREMENT", "MULTIPLY_ASSIGN", 
			"DIVIDE_ASSIGN", "MODULUS_ASSIGN", "POWER_ASSIGN", "RIGHT_SHIFT_ARITHMETIC_ASSIGN", 
			"LEFT_SHIFT_ARITHMETIC_ASSIGN", "RIGHT_SHIFT_LOGICAL_ASSIGN", "BIT_AND_ASSIGN", 
			"BIT_XOR_ASSIGN", "BIT_OR_ASSIGN", "NULLCOALESCE", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<AllContext> all() {
			return getRuleContexts(AllContext.class);
		}
		public AllContext all(int i) {
			return getRuleContext(AllContext.class,i);
		}
		public TerminalNode EOF() { return getToken(AngularParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 576796172610306048L) != 0) || ((((_la - 73)) & ~0x3f) == 0 && ((1L << (_la - 73)) & 4503599636284437L) != 0)) {
					{
					{
					setState(116);
					all();
					}
					}
					setState(121);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementsContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(AngularParser.IMPORT, 0); }
		public TerminalNode LEFT_BRACE() { return getToken(AngularParser.LEFT_BRACE, 0); }
		public TerminalNode RIGHT_BRACE() { return getToken(AngularParser.RIGHT_BRACE, 0); }
		public TerminalNode FROM() { return getToken(AngularParser.FROM, 0); }
		public TerminalNode STRING() { return getToken(AngularParser.STRING, 0); }
		public TerminalNode SEMICOLON() { return getToken(AngularParser.SEMICOLON, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(AngularParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AngularParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AngularParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngularParser.COMMA, i);
		}
		public ImportStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementsContext importStatements() throws RecognitionException {
		ImportStatementsContext _localctx = new ImportStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importStatements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(IMPORT);
			setState(126);
			match(LEFT_BRACE);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(127);
				match(IDENTIFIER);
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(133);
				match(COMMA);
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IDENTIFIER) {
					{
					{
					setState(134);
					match(IDENTIFIER);
					}
					}
					setState(139);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(145);
			match(RIGHT_BRACE);
			setState(146);
			match(FROM);
			setState(147);
			match(STRING);
			setState(148);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ServiceContext extends ParserRuleContext {
		public TerminalNode INJECTABLE() { return getToken(AngularParser.INJECTABLE, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(AngularParser.LEFT_PAREN, 0); }
		public TerminalNode LEFT_BRACE() { return getToken(AngularParser.LEFT_BRACE, 0); }
		public TerminalNode COLON() { return getToken(AngularParser.COLON, 0); }
		public TerminalNode STRING() { return getToken(AngularParser.STRING, 0); }
		public TerminalNode RIGHT_BRACE() { return getToken(AngularParser.RIGHT_BRACE, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(AngularParser.RIGHT_PAREN, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(AngularParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AngularParser.IDENTIFIER, i);
		}
		public ServiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_service; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterService(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitService(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitService(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ServiceContext service() throws RecognitionException {
		ServiceContext _localctx = new ServiceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_service);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(INJECTABLE);
			setState(151);
			match(LEFT_PAREN);
			setState(152);
			match(LEFT_BRACE);
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(153);
				match(IDENTIFIER);
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			match(COLON);
			setState(160);
			match(STRING);
			setState(161);
			match(RIGHT_BRACE);
			setState(162);
			match(RIGHT_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentDeclarationContext extends ParserRuleContext {
		public TerminalNode COMPONENT() { return getToken(AngularParser.COMPONENT, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(AngularParser.LEFT_PAREN, 0); }
		public TerminalNode LEFT_BRACE() { return getToken(AngularParser.LEFT_BRACE, 0); }
		public TerminalNode RIGHT_BRACE() { return getToken(AngularParser.RIGHT_BRACE, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(AngularParser.RIGHT_PAREN, 0); }
		public List<Component_metadataContext> component_metadata() {
			return getRuleContexts(Component_metadataContext.class);
		}
		public Component_metadataContext component_metadata(int i) {
			return getRuleContext(Component_metadataContext.class,i);
		}
		public ComponentDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponentDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponentDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponentDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentDeclarationContext componentDeclaration() throws RecognitionException {
		ComponentDeclarationContext _localctx = new ComponentDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_componentDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(COMPONENT);
			setState(165);
			match(LEFT_PAREN);
			setState(166);
			match(LEFT_BRACE);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 558446353793941504L) != 0)) {
				{
				{
				setState(167);
				component_metadata();
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(173);
			match(RIGHT_BRACE);
			setState(174);
			match(RIGHT_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
